# uci-ml-dataset-examples

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
uci_ml_dataset_examples/iris/: main.py
